# dark-circuit

./: CMakeLists.txt  Doxyfile  Makefile  README.md  configure
blocks/: blocks.flist
blocks/AddCmp/: addcmp.erb  make_addcmpN
blocks/AddCmp/rtl/: AddCmp50.sv
blocks/AddCmp/test/: Makefile  sim_main.cpp
blocks/BarrelShifter/rtl/: BarrelShifter.sv
blocks/Decoder/rtl/: Decoder.sv
blocks/Decoder/test/: Makefile  sim_main.cpp  tb_top.sv
blocks/Encoder/rtl/: Encoder8_3.sv
blocks/Incr/rtl/: Incr16.sv  Incr4.sv  Incr9.sv
blocks/Incr/test/: Makefile  sim_main.cpp  tb_top.sv
blocks/RegFile/rtl/: RegFile.sv
blocks/ShiftReg/rtl/: ShiftReg.sv
blocks/ShiftReg/test/: sim_main.cpp  tb_top.sv
blocks/incr/: incr.flist
blocks/incr/rtl/: incr3.sv
blocks/incr/test/: Makefile
docs/: CMakeLists.txt  index.html
eda/: verilator_simple_test.mk  verilator_tick.cpp  verilator_tick.h
inc/: clog2.svh
isa/: isa-define.h  isa.h
lib/: Mux1hot3.sv  Mux3.sv  Parity.sv  fulladder.sv  lib.flist
lib/cmos/: NAnd2.sv  Nor2.sv  Not.sv
lib/gates/: MuxI2.sv
lib/generic/: Dff.sv  Mux4.sv  Mux8.sv  OAI22.sv  SimRstGen.sv  lib.flist
rtl/blocks/: blocks.flist
rtl/blocks/ALU1/rtl/: Alu1.sv  Alu1Pkg.sv
rtl/blocks/AddCmp/: addcmp.erb
rtl/blocks/AddCmp/rtl/: AddCmp50.sv
rtl/blocks/AddCmp/test/: sim_main.cpp  tb_top.sv
rtl/blocks/BarrelShifter/rtl/: BarrelShifter.sv
rtl/blocks/Counter/rtl/: Counter.sv
rtl/blocks/Fifo/rtl/: Fifo.sv
rtl/blocks/Incr/rtl/: Incr16.sv  Incr3.sv  Incr4.sv  Incr9.sv
rtl/blocks/Incr/test/: Makefile  sim_main.cpp  tb_top.sv
rtl/blocks/JtagCoreDbg/cpp/: OocdRemoteBitbang.cpp  OocdRemoteBitbang.h
rtl/blocks/JtagCoreDbg/rtl/: CoreDbgApb.sv  CoreDbgPort.sv  DbgAccPort.sv  DbgApbBus.sv  Jtag2MemiSync.sv  JtagTap.sv  JtagTapDRegs.sv  JtagTapFsm.sv  JtagTapInsnReg.sv  SimDpiJtag.sv
rtl/blocks/PrgCounter/rtl/: PrgCounter.sv
rtl/blocks/ShiftReg/test/: sim_main.cpp  tb_top.sv
rtl/blocks/SimRAM/rtl/: SimRAM.sv
rtl/blocks/SimROM/rtl/: SimROM.sv
rtl/designs/mig1/: Mig1CPU.sv  Mig1Core.sv  mig1.flist
rtl/lib/gates/builtin/: INV.sv  Inv.sv  MUX2.sv  Mux2.sv  NAND2.sv  NAnd2.sv  builtin.flist
rtl/lib/macros/: RepeatMacro.svh  clog2.svh
rtl/lib/parts/: CarrySaveAdder.sv  FullAdder.sv  FullAdderAOI.sv  GatedClk.sv  LiMDff.sv  RippleCarryAdder.sv  Sram1R1W.sv  parts.flist
rtl/lib/sim/: SimClkGen.sv  sim.flist
test/: CMakeLists.txt
test/blocks/: CMakeLists.txt
test/blocks/Counter/: CMakeLists.txt
test/blocks/JtagCoreDbg/: CMakeLists.txt
test/blocks/SimROM/: CMakeLists.txt
test/designs/: CMakeLists.txt
test/gates/: CMakeLists.txt
test/gates/verilator/: CMakeLists.txt  TbTop.sv  sim_main.cpp
test/parts/: CMakeLists.txt
tools/: Makefile  as.cpp  srec.cpp  srec.h
tools/eda/verilator/: simple_test.cmake  verilator_tick.cpp  verilator_tick.h
tools/eda/xcelium/: sim_tcl.cmake  simple_test.cmake
tools/isa/: isa.cpp  isa.h
tools/old/: Makefile
(+95 files in other folders)
